5.Usuarios/Keycloack/OpenFaaSs/oauth2-proxy-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: openfaas
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
      - args:
        - --provider=keycloak
        # - --keycloak-group=users
        - --email-domain=*
        - --client-id=openfaas
        - --client-secret=9ebc7602-e6bd-47f8-b376-4876d24807ac
        - --login-url=https://keycloak.192.168.0.100.nip.io/auth/realms/tfm/protocol/openid-connect/auth
        - --redeem-url=https://keycloak.192.168.0.100.nip.io/auth/realms/tfm/protocol/openid-connect/token
        - --validate-url=https://keycloak.192.168.0.100.nip.io/auth/realms/tfm/protocol/openid-connect/userinfo
        - --http-address=:4180
        - --scope=profile
        - --ssl-insecure-skip-verify=true
        - --ssl-upstream-insecure-skip-verify=true
        - --pass-access-token=true
        - --pass-user-headers=true
        - --pass-authorization-header=true
        - --prefer-email-to-user=true
        # - --set-xauthrequest=true
        # - --set-authorization-header=true
        - --upstream=http://gateway.openfaas.svc.cluster.local:8080/
        image: quay.io/oauth2-proxy/oauth2-proxy:latest
        imagePullPolicy: Always
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: openfaas
spec:
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    k8s-app: oauth2-proxy

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: openfaas-ingress
  namespace: openfaas
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
spec:
  tls:
  - hosts:
    - openfaas.192.168.0.100.nip.io
  rules:
  - host: openfaas.192.168.0.100.nip.io
    http:
      paths:
      - path: /(.*)
        backend:
          serviceName: oauth2-proxy
          servicePort: 4180
